--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@ A M A N D A H E R E D I A A M A N D A H E R E D I A A M A N D A H E R E D I A A 
     <title>Amanda's Portfolio</title>
     <link href="assets/css/stylesheet.css" rel="stylesheet">
     <link rel="shortcut icon" href="assets/img/a-character.ico" type="image/x-icon"/>
+
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142006522-1"></script>
+   <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+
+   gtag('config', 'UA-142006522-1');
+   </script>
+
 </head>
 <body>
 
