--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ A M A N D A H E R E D I A A M A N D A H E R E D I A A M A N D A H E R E D I A A 
               </div>
               <div class="column">
                   <div class="left">
-                    <p>Has a background in Editorial and great passion for layout. Recently graduated in Web Application Development at TU Dublin, an NFQ 7 course focused on how to design and develop webpages and applications using languages such as HTML, CSS, JavaScript and its frameworks. </p>
-                    <p>Has a huge understanding of information architecture, color theory, and typography psychology due to several years designing pages from scratch. Since then has developed a vast diverse skill set that approaches both print and digital arts.</p>
-                    <p>Is extremely passionate about researching tech features and its updates, constantly learning new techniques, trends, and tools. Currently in love with user experience. Is a detail-oriented thinker, striving to provide creative and professional services.</p>
+                    <p>I've background in Editorial and great passion for layout. I'm recently graduated in Web Application Development at TU Dublin, an NFQ 7 course focused on how to design and develop webpages and applications using languages such as HTML, CSS, JavaScript and its frameworks. </p>
+                    <p>I've a huge understanding about information architecture, color theory, and typography psychology due to several years designing pages from scratch. Since then, I was able to develop a vast diverse skill set that approaches both print and digital arts.</p>
+                    <p>I'm extremely passionate about researching tech features and its updates, constantly learning new techniques, trends, and tools. Currently in love with user experience. I'm a detail-oriented thinker, striving to provide creative and professional services.</p>
                     
                     <hr class="linebreak">
 
