Updated head tags.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ A M A N D A H E R E D I A A M A N D A H E R E D I A A M A N D A H E R E D I A A 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amanda's Portfolio</title>
+    <title>Amanda Heredia</title>
+    <meta name="description" content="This is where to find Amanda's online portfolio for both Web Design and Development.">
+	<meta name="keywords" content="Design, Web Design, Web Designer, Graphic Designer, Developer, Development skills, Desenvolvimento, Designer">
+    <meta name="author" content="Amanda Heredia">
     <link href="assets/css/stylesheet.css" rel="stylesheet">
     <link rel="shortcut icon" href="assets/img/a-character.ico" type="image/x-icon"/>
 
