--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@ A M A N D A H E R E D I A A M A N D A H E R E D I A A M A N D A H E R E D I A A 
 
    gtag('config', 'UA-142006522-1');
    </script>
+	
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2033627,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 </head>
 <body>
